--- a/ex-12.css
+++ b/ex-12.css
@@ -62,11 +62,15 @@ span {
  
  .el7 {
     background-color:  #0A89A6;
+    
+    grid-row: span 2;
  }
  
  
  .el8 {
     background-color: #C8E6C9;
+    
+    grid-column: span 2;
  }
  
  
